<resources>
    <string name="app_name">Playground</string>

    <!-- Main -->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="navigationdrawer_open">open</string>
    <string name="navigationdrawer_closed">closed</string>
    <!-- Main -->

    <string name="INTENT_BUTTON_PRESSED">custom.intent.action.BUTTON_PRESSED</string>
    <string name="send_broadcast">send broadcast</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="example_name">Max Mustermann</string>
    <string name="example_line1">Line1</string>
    <string name="example_line2">Line2</string>
    <string name="dismiss">Dismiss</string>
    <string name="ok">OK</string>
    <string name="lorem_long">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>
    <string name="dialog_toolbar_title">this is a dialog</string>
    <string name="dialog_full">Open fullscreen dialog</string>
    <string name="dialog_popup">Open popup dialog</string>


    <string name="keystore_entries_list">List of entries:</string>
    <string name="keystore_key_ops_header">Key operations</string>
    <string name="keystore_plaintext">Plaintext:</string>
    <string name="keystore_ciphertext">Ciphertext:</string>
    <string name="keystore_sign">Sign</string>
    <string name="keystore_verify">Verify</string>
    <string name="keystore_delete">Delete</string>
    <string name="keystore_generating_header">Generating</string>
    <string name="keystore_entry_alias">Entry alias:</string>
    <string name="keystore_generate">Generate</string>
    <string name="keystore_no_alias_error">Must supply an alias</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

</resources>
